[package]
name = "app_config"
version = "0.1.2"
authors = ["Will <gh@ibvd.net>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]

[dependencies]
tokio = { version="0.2.0", features=["full"] }
rusoto_core = "0.45.0"
rusoto_appconfig = "0.45.0"
clap = "2.33.3"
shellexpand = "2.0.0"
serde = "1.0.117"
toml = { version = "0.5.7", features=["preserve_order"] }
handlebars = "3.5.0"
serde_yaml = "0.8.13"
serde_json = "1.0.59"
serde_derive = "1.0.117"
exitcode = "1.1.2"
rusoto_ssm = "0.45.0"
simple-eyre = "0.3.0"
eyre = "0.6.2"

[profile.release]
lto = true
panic = 'abort'

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"

[[test]]
name = "cli"
path = "tests/cli.rs"

[[test]]
name = "ps"
path = "tests/param_store.rs"
